In progress: Code function Restore All Hided Customers.

--- a/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/new_style.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/status.css}">
 <link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonGroupFunction.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/resources/css/buttonRestoreHidedCustomers.css}">
 
 <th:block th:include="fragments/head"></th:block>
 </head>
