--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_customerListCRMScreen.html
@@ -32,13 +32,22 @@
 <!-- 								<i class="fa-solid fa-plus"></i> Thêm mới khách hàng -->
 <!-- 							</button> -->
 							
+							<div class="addCustomerAndRestoreCustomer">
 							<!-- Thay đổi nút Thêm khách hàng -->
-							<a th:href = "@{/customer/newEditCustomer}">
-								<button class="addCustomerbtn">
-									<!-- onclick="window.location.href='/crm-web/add-customer-dan'"> -->
-									<i class="fa-solid fa-plus"></i> Thêm mới khách hàng
-								</button>
-							</a>
+								<a th:href = "@{/customer/newEditCustomer}">
+									<button class="addCustomerbtn">
+										<!-- onclick="window.location.href='/crm-web/add-customer-dan'"> -->
+										<i class="fa-solid fa-plus"></i> Thêm mới khách hàng
+									</button>
+								</a>
+								
+								<a th:href = "@{/customer/newEditCustomer}">
+									<button class="restoreHidedCustomerbtn">
+										<!-- onclick="window.location.href='/crm-web/add-customer-dan'"> -->
+										<i class="fa-solid fa-arrows-rotate"></i> Khôi phục khách hàng bị ẩn
+									</button>
+								</a>
+							</div>
 
 						</div>
 
