Thêm lọc interaction

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
@@ -59,6 +59,7 @@
 				</div>
 
 				<div class="right-panel p-0 m-0 w-100">
+					<th:block th:include="fragments/interaction/frg_searchInteraction.html"></th:block>
 					<th:block th:include="fragments/interaction/frg_interaction.html"></th:block>
 				</div>
 			</div>
