--- a/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_searchInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_searchInteraction.html
@@ -40,13 +40,13 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <fieldset class="startdate-option">
-                                            <h5>Ngày lập</h5>
+                                            <h5>Ngày bắt đầu</h5>
                                             <input class="form-control" type="date" id="startDateInput">
                                         </fieldset>
                                     </div>
                                     <div class="col-md-6">
                                         <fieldset class="delidate-option">
-                                            <h5>Ngày giao</h5>
+                                            <h5>Ngày kết thúc</h5>
                                             <input class="form-control" type="date" id="endDateInput">
                                         </fieldset>
                                     </div>
