Complet function Show (Restore) All Hided Customer Version 0

--- a/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
+++ b/web/src/main/webapp/WEB-INF/templates/customer_list_v2.html
@@ -55,6 +55,7 @@
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/toggleCheckboxActions.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/addCustomer.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/buttonGroupFunction.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/showHidedCustomers.js}"></script>
 
 </body>
 </html>
