--- a/web/src/main/webapp/WEB-INF/templates/fragments/orderDetailModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/orderDetailModal.html
@@ -28,7 +28,7 @@
 			    </div>
 			    <div class="form-group col-md-6">
 			      <label for="inputOrderCode">Mã đơn hàng</label>
-			      <input type="text" class="form-control" id=orderCodeDetailInput style="background-color: white; color: black;" readonly>
+			      <input type="text" class="form-control" id=orderCodeDetailInput maxlength="255" style="background-color: white; color: black;" readonly>
 			    </div>
 			</div>
 	    	
@@ -36,11 +36,11 @@
 				    <div class="form-row">
 				        <div class="form-group col-md-6">
 				            <label for="goodsType">Loại hàng hóa</label>
-				            <select class="form-control" id="orderGoodsDetail" style="background-color: white; color: black;" readonly></select>
+				            <select class="form-control" id="orderGoodsDetail" maxlength="255" style="background-color: white; color: black;" readonly></select>
 				        </div>
 				        <div class="form-group col-md-6">
 				            <label for="transportMethod">Phương tiện vận chuyển</label>
-				            <input type="text" class="form-control" id="orderTransportDetail" style="background-color: white; color: black;" readonly>
+				            <input type="text" class="form-control" id="orderTransportDetail" maxlength="255" style="background-color: white; color: black;" readonly>
 				        </div>
 				    </div>
 		    </div>
@@ -60,11 +60,11 @@
 			                </tr>
 			                <tr>
 			                    <td>SDT:</td>
-			                    <td><input type="text" class="input-container" id= "orderSenderPhoneDetail" placeholder="(+84) 1234567890" readonly /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderPhoneDetail" maxlength="10" placeholder="(+84) 1234567890" readonly /></td>
 			                </tr>
 			                <tr>
 			                    <td>Email:</td>
-			                    <td><input type="text" class="input-container" id= "orderSenderEmailDetail" readonly /></td>
+			                    <td><input type="text" class="input-container" id= "orderSenderEmailDetail" maxlength="99" readonly /></td>
 			                </tr>
 			            </table>
 			        </fieldset>
@@ -84,11 +84,11 @@
 				                </tr>
 				                <tr>
 				                    <td>SDT:</td>
-				                    <td><input type="text" class="input-container" id= "orderReceiverPhoneDetail" placeholder="(+84) 1234567890" readonly/></td>
+				                    <td><input type="text" class="input-container" id= "orderReceiverPhoneDetail" maxlength="10" placeholder="(+84) 1234567890" readonly/></td>
 				                </tr>
 				                <tr>
 				                    <td>Email:</td>
-				                    <td><input type="email" class="input-container" id= "orderReceiverEmailDetail" readonly/></td>
+				                    <td><input type="email" class="input-container" id= "orderReceiverEmailDetail" maxlength="99" readonly/></td>
 				                </tr>
 				            </table>
 				        </fieldset>
@@ -100,13 +100,13 @@
 				        <div class="form-group col-md-6">
 				            <label for="goodsType">Yêu cầu</label>
 				            <div data-mdb-input-init class="form-outline">
-								<textarea class="form-control" id="orderRequirementDetail" rows="8" readonly></textarea>
+								<textarea class="form-control" id="orderRequirementDetail" rows="8" maxlength="255" readonly></textarea>
 							</div>
 				        </div>
 				        <div class="form-group col-md-6">
 				            <label for="transportMethod">Địa chỉ</label>
 				            <div data-mdb-input-init class="form-outline">
-								<textarea class="form-control" id="orderAddressDetail" rows="8" readonly></textarea>
+								<textarea class="form-control" id="orderAddressDetail" rows="8" maxlength="255" readonly></textarea>
 							</div>
 				        </div>
 				    </div>
