fix tìm kiếm historyUpdate.html

--- a/web/src/main/webapp/WEB-INF/templates/historyUpdate.html
+++ b/web/src/main/webapp/WEB-INF/templates/historyUpdate.html
@@ -110,7 +110,7 @@
     </div>
 
     <!-- Bảng dữ liệu -->
-    <table border="historyTable">
+    <table id="historyTable" border="1">
         <thead>
             <tr>
                 <th>ID</th>
