thêm localstorage lưu lại dữ liệu người dùng khi tạo mới Customer mà chưa hoàn thành

--- a/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frm_formCustomerWithValue.html
@@ -116,5 +116,7 @@
 	    }
 	  });
 	</script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/localStorageNewCustomer.js}"></script>
+
 	<!-- END CONTENT -->
 </html>
