--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
@@ -36,15 +36,14 @@
 			      </datalist>
 			    </div>
 			     <div class="form-group col-md-6">
-				    <label for="goodsType">Loại đơn hàng</label>
-				    <input list="orderCategories" id="orderCategoryCreate" class="form-control" placeholder="Nhập hoặc chọn loại đơn hàng">
-				    <datalist id="orderCategories">
+				    <label for="orderCategoryCreate">Loại đơn hàng</label>
+				    <select id="orderCategoryCreate" class="form-control select2" style="width: 100%;">
+				        <option value="" disabled selected>Nhập hoặc chọn loại đơn hàng</option>
 				        <th:block th:each="orderCategory : ${orderCategories}">
-				            <option th:value="${orderCategory.name}" th:data-id="${orderCategory.id}"></option>
+				            <option th:value="${orderCategory.id}" th:text="${orderCategory.name}"></option>
 				        </th:block>
-				    </datalist>
+				    </select>
 				</div>
-
 			</div>
 	    	
 		    <br/><div class="row2">
@@ -181,7 +180,11 @@
 		    $('.select2').select2({
 		        tags: true,
 		        placeholder: "Nhập hoặc chọn tên",
+		        language: "vi", // Sử dụng ngôn ngữ Tiếng Việt
 		        allowClear: true
+		    });
+		    $('.select2').on('select2:open', function () {
+		        $('.select2-search__field').attr('placeholder', 'Tìm kiếm...');
 		    });
 	
 		    // Cập nhật thông tin "Người gửi"
