--- a/web/src/main/webapp/WEB-INF/templates/newEditCustomer.html
+++ b/web/src/main/webapp/WEB-INF/templates/newEditCustomer.html
@@ -34,6 +34,7 @@
     <!-- FILE JS BỔ SUNG -->
     <script type="text/javascript" th:src="@{/resources/app-assets/js/update/navigate.js}"></script>
     <script type="text/javascript" th:src="@{/resources/app-assets/js/update/editCustomer_Dat.js}" defer></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/localStorageNewCustomer.js}"></script>
 	
 	<script type="text/javascript">
 	 document.getElementById('updateCustomerForm').addEventListener('submit', function(event) {
