Liên kết create order ở list customer và load thông tin của công ty vào phần người gửi ở create order

--- a/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/createOrderModal.html
@@ -90,7 +90,8 @@
 				                        <th:block th:each="customer : ${listCustomers}">
 				                            <option th:value="${customer.id}" 
 				                                    th:data-phone="${customer.phone}" 
-				                                    th:data-email="${customer.email}">
+				                                    th:data-email="${customer.email}"
+				                                    th:selected="${customer.id == selectedCustomer?.id}">
 				                                <span th:text="${customer.contactPerson}"></span>
 				                            </option>
 				                        </th:block>
