Thêm button BackToTop vào trang Chủ, trang Hệ sinh thái. Thêm đường dẫn đến Ecosystem, sửa lỗi logo Encosystem điều hướng về trang chủ

--- a/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/home/content.html
@@ -117,7 +117,7 @@
 								<p class="text-center">Tích hợp các kênh bán hàng trên mạng
 									xã hội (Fanpage & Zalo OA) với hệ thống CRM, lưu trữ và quản lý
 									thông tin khách hàng</p>
-								<a href="#" class="learn-more">Xem ngay →</a>
+								<a th:href="@{/ecosystem}" class="learn-more">Xem ngay →</a>
 							</div>
 						</div>
 					</div>
