--- a/web/src/main/webapp/WEB-INF/templates/intro.html
+++ b/web/src/main/webapp/WEB-INF/templates/intro.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM Intro</title>
+    <link rel="stylesheet" href="resources/css/buttonBackToTop.css">
+    
     <th:block th:include="fragments/common_meta_title"></th:block>
     <th:block th:include="fragments/head"></th:block>
     <th:block th:include="fragments/common_css"></th:block>
@@ -125,8 +127,16 @@
 		</div>
 	</section>
 
+	<!-- Button backToTop -->
+	<button id="backToTop" class="btn btn-primary rounded-circle">
+  		<i class="fas fa-arrow-up"></i>
+	</button>
+	
 	<!-- Footer Section -->
     <th:block th:include="fragments/home/footerForIntro"></th:block>
 </body>
 <th:block th:include="fragments/common_javascript"></th:block>
+
+<script src="resources/js/task/BackToTop.js"></script>
+
 </html>
