--- a/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/frg_CustomerDetail.html
@@ -32,11 +32,8 @@
 					</div>
 
 					<div class="actions">
-						<a th:href="@{newEditCustomer(id=${customer.id})}" >
-						    <button type="button"
-						    	style="cursor: pointer;">
-						    Edit
-						    </button>
+						<a th:href="@{newEditCustomer(id=${customer.id})}" style="text-decoration: none;">
+						    <button type="button" style="cursor: pointer;">Edit</button>
 						</a>
 						<button style="cursor: pointer; background: #DA4453" th:onclick="'hideCustomer_Interaction(' + ${customer.id} + ')'">Hide</button>
 					</div>
@@ -52,14 +49,13 @@
 					</div>
 
 					<div class="creation-info">
-						<p><span class="label-bold">Ngày tạo:</span>9/8/2024 9:00</p>
-						<p><span class="label-bold">Người tạo:</span>Nguyễn Hoàng Phương Ngân</p>
-						<p><span class="label-bold">Đã mua:</span>0 lần</p>
+						<p><span class="label-bold">Ngày tạo:</span> 9/8/2024 9:00</p>
+						<p><span class="label-bold">Người tạo:</span> Nguyễn Hoàng Phương Ngân</p>
+						<p><span class="label-bold">Đã mua:</span> 0 lần</p>
 					</div>
 				</div>
 
 				<div class="right-panel p-0 m-0 w-100">
-					<th:block th:include="fragments/interaction/frg_searchInteraction.html"></th:block>
 					<th:block th:include="fragments/interaction/frg_interaction.html"></th:block>
 				</div>
 			</div>
