--- a/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_searchInteraction.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/interaction/frg_searchInteraction.html
@@ -29,9 +29,8 @@
                         <div class="row">
                             <div class="col-md-3 col-sm-12">
                                 <fieldset class="text-left customer-option">
-                                    <h5>Khách hàng</h5>
+                                    <h5>Người trao đổi</h5>
 								    <select class="form-control" id="customerSelect">
-								        <option value="" selected>-- Chọn khách hàng --</option>
 								        <!-- Các option sẽ được cập nhật từ JavaScript -->
 								    </select>
                                 </fieldset>
