Review code UI Contact Page and and edit link at file hmenu.html to redirect to Contact Page.

--- a/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/hmenu.html
@@ -16,6 +16,7 @@
                 <ul class="dropdown-menu">
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/}" data-toggle="dropdown">Home Page</a></li>
                 	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/ecosystem}" data-toggle="dropdown">Ecosystem</a></li>
+                	<li class="active" data-menu=""><a class="dropdown-item" th:href="@{/contact}" data-toggle="dropdown">Contact</a></li>
                 </ul>
             </li>
             <li class="dropdown nav-item active" data-menu="dropdown">
