thêm đối tác MKSOL, thêm đường dẫn mới đến Ecosystem

--- a/web/src/main/webapp/WEB-INF/templates/ecosystem.html
+++ b/web/src/main/webapp/WEB-INF/templates/ecosystem.html
@@ -151,6 +151,17 @@
 						    </div>
 					    </div>
 					</div>
+					
+					<div class="col" data-category="fanpage">
+    					<div class="card text-center" style="cursor: pointer;">
+	        				<div class="card-body">
+								<a href="https://mksol.vn/" target="_blank" style="text-decoration: none;">
+								    <img src="resources/Image/ecosystem_mksol.png" alt="Partner Logo" class="img-fluid mb-3">
+								    <h6 class="card-title">MKSOL</h6>
+								</a>
+						    </div>
+					    </div>
+					</div>
 
 					<div class="col" data-category="chatbot">
     					<div class="card text-center" style="cursor: pointer;">
